kubernetes/workloads/external-secrets/manifests/base/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: secretstore-validate
  labels:
    helm.sh/chart: external-secrets-0.20.2
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/version: v0.20.2
    app.kubernetes.io/managed-by: Helm
    external-secrets.io/component: webhook
webhooks:
  - name: validate.secretstore.external-secrets.io
    rules:
      - apiGroups:
          - external-secrets.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - secretstores
        scope: Namespaced
    clientConfig:
      service:
        namespace: external-secrets
        name: external-secrets-webhook
        path: /validate-external-secrets-io-v1-secretstore
    admissionReviewVersions:
      - v1
      - v1beta1
    sideEffects: None
    timeoutSeconds: 5
  - name: validate.clustersecretstore.external-secrets.io
    rules:
      - apiGroups:
          - external-secrets.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - clustersecretstores
        scope: Cluster
    clientConfig:
      service:
        namespace: external-secrets
        name: external-secrets-webhook
        path: /validate-external-secrets-io-v1-clustersecretstore
    admissionReviewVersions:
      - v1
      - v1beta1
    sideEffects: None
    timeoutSeconds: 5
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: externalsecret-validate
  labels:
    helm.sh/chart: external-secrets-0.20.2
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/version: v0.20.2
    app.kubernetes.io/managed-by: Helm
    external-secrets.io/component: webhook
webhooks:
  - name: validate.externalsecret.external-secrets.io
    rules:
      - apiGroups:
          - external-secrets.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - externalsecrets
        scope: Namespaced
    clientConfig:
      service:
        namespace: external-secrets
        name: external-secrets-webhook
        path: /validate-external-secrets-io-v1-externalsecret
    admissionReviewVersions:
      - v1
      - v1beta1
    sideEffects: None
    timeoutSeconds: 5
    failurePolicy: Fail
